--- a/style.css
+++ b/style.css
@@ -14,9 +14,9 @@ body
 
 .webgl
 {
-    position: fixed;
+    /* position: fixed; */
     top: 0;
-    left: 0;
+    /* left: 0; */
     outline: none;
 }
 
