--- a/style.css
+++ b/style.css
@@ -19,6 +19,45 @@ body {
     outline: none;
 }
 
+#blocker, #blocker2 {
+    font-family: 'Courier New', monospace;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    /* background-color: rgba(0,0,0,0.5); */
+}
+
+#instructions {
+    width: 100%;
+    height: 100%;
+    position:absolute;
+    
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+
+    text-align: center;
+    font-size: 30px;
+    cursor: pointer;
+}
+
+
+#gameover {
+    width: 100%;
+    height: 100%;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+
+    text-align: center;
+    font-size: 30px;
+    cursor: pointer;
+}
+
+
 .scores {
     position: absolute;
     position: 0 0;
