--- a/style.css
+++ b/style.css
@@ -94,3 +94,30 @@ body {
     padding-top: 5px;
     font-size: 16px;
 }
+
+#healthboard {
+    font-family: sans-serif;
+    color: #fff;
+    font-weight: 100;
+    text-align: center;
+    font-size: 30px;
+    position: fixed;
+    display: block;
+    z-index: 99;
+    padding: 3px;
+    margin: 1rem 7rem;
+}
+
+#healthboard>div {
+    padding: 10px;
+    border-radius: 3px;
+    background: #701470;
+    display: inline-block;
+}
+
+#healthboard div>span {
+    padding: 15px;
+    border-radius: 3px;
+    background: #ac7dac;;
+    display: inline-block;
+}
